--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ body {
     color: var(--foreground);
     line-height: 1.5;
     background-color: var(--background);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://files.catbox.moe/q4yhjl.mp4');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://files.catbox.moe/5cag1c.gif');
     background-size: 30px 30px, 90px 90px;
     background-position: 0 0, 15px 15px;
     position: relative;
