--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body {
     font-family: var(--font-sans);
     color: #ffffff; 
     line-height: 1.5;
-    background-color: #36393f; 
+    background-color: #7a4631;  
     background-image: none;
     position: relative;
 }
