--- a/index.css
+++ b/index.css
@@ -13,8 +13,48 @@ body {
     overflow-x: hidden;
 }
 
+#loading {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+  
+  .spinner {
+    width: 60px;
+    height: 60px;
+    border: 6px solid #d1b3ff; 
+    border-top: 6px solid #8000ff; 
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+
+
+.home{
+    background-color: #ffffff;
+}
+.skills{
+   background-color: #9f0eff;
+}
+.pro{
+    background-color: #06031a;
+}
+
+
+
+
 nav {
-    background: rgba(0, 0, 0, 0.8);
+    background: rgb(0, 0, 0);
     backdrop-filter: blur(10px);
     padding: 20px 80px;
     position: fixed;
@@ -30,8 +70,8 @@ nav {
 .logo {
     font-size: 32px;
     font-weight: bold;
-    color: #56d6b0;
-    text-shadow: 0 0 10px #56d6b0;
+    color: #ffffffe0;
+    
 }
 
 nav ul {
@@ -50,13 +90,33 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #56d6b0;
-    background: #56d6b027;
+    color: #8d56d6;
+    position: relative;
+}
+
+nav ul li a:hover::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    width: 0;
+    height: 2px;
+    background: #8d56d6;
+    animation: loadingLine 0.5s forwards;
+}
+
+@keyframes loadingLine {
+    from {
+        width: 0;
+    }
+    to {
+        width: 100%;
+    }
 }
 
 section {
     padding: 120px 80px;
-    min-height: 70vh;
+    min-height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -85,8 +145,9 @@ section {
     width: 400px;
     height: 400px;
     border-radius: 50%;
-    box-shadow: 0 0 50px #56d6b0;
+    border: #8d56d6 3px solid;
     transition: transform 0.5s ease;
+    background: #000000;
 }
 
 .hero img:hover {
@@ -101,22 +162,21 @@ section {
 .hero-text h1 {
     font-size: 72px;
     margin-bottom: 30px;
-    color: #56d6b0;
-    text-shadow: 0 0 20px rgba(255, 105, 180, 0.3);
+    color: #8d56d6;
+    
 }
 
 .hero-text p {
     font-size: 24px;
     line-height: 1.8;
-    color: #ccc;
+    color: #000000;
 }
 
 h2 {
     text-align: center;
     font-size: 48px;
     margin-bottom: 60px;
-    color: #56d6b0;
-    text-shadow: 0 0 15px rgba(255, 153, 105, 0.3);
+    color: #ffffff;
 }
 
 .skills-container {
@@ -129,21 +189,21 @@ h2 {
 
 .skill-card {
     background: rgba(255, 255, 255, 0.05);
-    border-left: 4px solid #56d6b0;
     padding: 40px;
-    border-radius: 0 20px 20px 0;
+    border-radius: 20px;
     backdrop-filter: blur(10px);
     transition: all 0.3s ease;
+    background-color: #000000;
 }
 
 .skill-card:hover {
     transform: translateY(-10px);
-    box-shadow: 0 10px 30px #56d6b0;
+  
 }
 
 .skill-card i {
     font-size: 48px;
-    color: #c8f0e2;
+    color: #ffffff;
     margin-bottom: 25px;
 }
 
@@ -165,159 +225,39 @@ h2 {
 .progress {
     position: absolute;
     height: 100%;
-    background: linear-gradient(90deg, #f0edeba8, #a3e2d8);
+    background: linear-gradient(90deg, #777777a8, #a246ec);
     border-radius: 10px;
     animation: progressAnimation 1.5s ease-out;
 }
 
 .services-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 40px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 60px;
     max-width: 1400px;
     margin: 0 auto;
 }
 
-.service-card {
-    background: rgba(255, 255, 255, 0.05);
+.service-caption {
+    background: rgb(68, 68, 68);
     border-radius: 5%;
     padding: 40px;
     position: relative;
-    border-left: 4px solid #56d6b0;
-    backdrop-filter: blur(10px);
     transition: all 0.3s ease;
 }
-.service-card .price {
-    border-bottom: #666 1px solid;
-    padding-bottom: 10px;
-    padding-top: 1cm;
- 
 
-}
 
 .service-card:hover {
     transform: translateY(-10px);
-    box-shadow: 0 10px 30px #56d6b0;
+   
 }
 
-.service-card ul {
-    list-style: none;
-    margin: 20px 0;
-}
-
-.service-card ul li {
-    margin: 10px 0;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.service-card ul li i {
-    color: #56d6b0;
-}
-
-.popular {
-    border: 2px solid #56d6b0;
-    transform: scale(1.05);
-}
-
-.popular-badge {
-    position: absolute;
-    top: -15px;
-    right: 20px;
-    background: #8e2ec5;
-    padding: 5px 15px;
-    border-radius: 20px;
-    font-size: 14px;
-    font-weight: bold;
-}
-
-.reviews-container {
-    position: relative;
-    max-width: 1000px;
-    margin: 0 auto;
-    overflow: hidden;
-}
-
-.review-card {
-    background: rgba(255, 255, 255, 0.05);
-    border-radius: 20px;
-    padding: 40px;
-    margin: 20px;
-    backdrop-filter: blur(10px);
-    display: none;
-    animation: fadeIn 0.5s ease-in-out;
-}
-
-.review-card.active {
-    display: block;
-}
-
-.review-header {
-    display: flex;
-    align-items: center;
-    gap: 25px;
-    margin-bottom: 25px;
-}
-
-.review-header img {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    border: 3px solid #56d6b0;
-    object-fit: cover;
-}
-
-.carousel-buttons {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 30px;
-}
-
-.carousel-btn {
-    background: #56d6b01e;
-    border: none;
-    color: #56d6b0;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    font-size: 20px;
-}
-
-.carousel-btn:hover {
-    background: #2f3d39;
-}
-.carousel-buttons a {
-    text-decoration: none;
-    color: #56d6b0;
-    font-weight: bold;
-    transition: color 0.3s ease;
-    
-}
-.carousel-buttons a:hover {
-    text-decoration: none;
-    color: #56d6b0;
-    font-weight: bold;
-    font-size: 1.2rem;
-    transition: color 0.3s ease;
-    padding: 0;
-    
-}
-
-
-.stars {
-    color: #56d6b0;
-    font-size: 22px;
-}
 
 footer {
     background: rgba(0, 0, 0, 0.9);
     padding: 80px 0 20px;
     margin-top: 80px;
-    border-top: 1px solid #56d6b0;
+
 }
 
 .footer-content {
@@ -354,9 +294,6 @@ footer {
     gap: 10px;
 }
 
-.footer-section p i {
-    color: #56d6b0;
-}
 
 .footer-section ul {
     list-style: none;
@@ -373,7 +310,7 @@ footer {
 }
 
 .footer-section ul li a:hover {
-    color: #0b3327;
+  
     padding-left: 8px;
 }
 
@@ -397,16 +334,13 @@ footer {
 }
 
 .social-links a:hover {
-    color: #070808;
-    transform: translateY(-5px);
-    background: #56d6b0;
+    color: #807d7d;
 }
 
 .footer-bottom {
     text-align: center;
     margin-top: 60px;
     padding-top: 20px;
-    border-top: 1px solid #56d6b0;
     color: #666;
 }
 
@@ -437,6 +371,10 @@ footer {
 }
 
 @media (max-width: 768px) {
+    .hero-text {
+        max-width: 100%;
+        
+    }
     nav {
         padding: 20px;
     }
@@ -512,4 +450,57 @@ footer {
     .service-card {
         padding: 30px;
     }
+}
+
+.service-link {
+    background: rgba(119, 119, 119, 0.377);
+    border-radius: 20px;
+    overflow: hidden;
+    transition: all 0.3s ease;
+}
+
+.service-link a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.service-link img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+}
+
+.service-caption {
+    padding: 10px;
+    text-align: center;
+}
+
+.service-caption h3 {
+    margin-bottom: 10px;
+    color: #8d56d6;
+}
+.service-caption a{
+    color: #8d56d6;
+}
+.service-caption p {
+    font-size: 0.9em;
+    color: #aaaaaa;
+    margin-bottom: 10px;
+}
+
+.price {
+    display: block;
+    color: #8d56d6;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.service-link:hover {
+    transform: translateY(-10px);
+    
+}
+
+.service-link:hover img {
+    transform: scale(1.05);
 }
