--- a/index.css
+++ b/index.css
@@ -41,7 +41,7 @@ body {
 
 
 .home{
-    background-color: #f3e6bb;
+    background-color: rgb(255, 250, 221);
 }
 .skills{
    background-color: #39005f;
