--- a/assets/main.css
+++ b/assets/main.css
@@ -194,3 +194,29 @@ li{
 }
 
 
+i {
+    font-size: larger;
+}
+
+
+.links {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
+    
+}
+
+i{
+    color: rgb(200, 200, 120);
+
+}
+
+.links a{
+    text-decoration: none;
+    font-size: 1rem;
+    background-color: rgb(30, 30, 30);
+    padding: 10px 10px;
+    border-radius: 8px;
+    transition: background-color 0.3s ease;
+}
